# byfly-wifi-auth

./: CMakeLists.txt  CPackConfig.cmake  LICENSE  README.rst
cmake/checks/: CheckC99.cmake  CheckLTO.cmake  CheckLibcurl.cmake  CheckPipe.cmake  CheckVerbose.cmake
cmake/checks/C99/: CMakeLists.txt  main.c
cmake/checks/basic/: CMakeLists.txt  main.c
cmake/checks/libcurl/: CMakeLists.txt  main.c
cmake/finds/: Findlibcurl.cmake
cmake/toolchains/gcc/: leak-sanitizer.cmake  openwrt-15.05-ar71xx.cmake
src/: CMakeLists.txt  auth.c  auth.h  auth_conf.c  auth_conf.h  common.c  common.h  dns.c  dns.h  https.c  https.h  main.c  resolve_conf.c  resolve_conf.h
src/etc/: 99-byfly-wifi-auth  CMakeLists.txt  byfly-wifi-auth.sh  ca-bundle.crt  passwd
